# CMakeList.txt : CMake project for AoC2020, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (AoC2020 "AoC2020.cpp" "AoC2020.h" "Day1/Day1.cpp" "Day1/Day1.h" "Day2/Day2.cpp" "Day2/Day2.h" "Day3/Day3.cpp" "Day3/Day3.h" "Day4/Day4.cpp" "Day4/Day4.h")

# TODO: Add tests and install targets if needed.
